@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-01-07T00:37:20Z",
+  "timestamp" : "2025-01-19T01:10:24Z",
   "count_outdated" : 512,
   "uniques_outdated" : 339,
-  "count" : 513,
-  "uniques" : 340,
+  "count" : 514,
+  "uniques" : 341,
   "clones" : [
     {
       "timestamp": "2025-01-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-01-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
